# solar-profiles-research

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: load_profiles.csv  pvwatts_solar_profiles_jan1.csv  solar_profiles_workbook.xlsx  solar_seasonal_profiles.csv
docs/: dashboard.html  solar_map.html
scripts/: generate.py  generate_map.py
solar_profiles/: __init__.py  api.py  cli.py  core.py
tests/: test_api.py  test_core.py
